--- a/themes/FleetManagement/templates/views/views-view-table.html.twig
+++ b/themes/FleetManagement/templates/views/views-view-table.html.twig
@@ -66,7 +66,7 @@
     </caption>
     {% endif %} #}
     {% if header %}
-    <thead>
+    <thead class="thead-light">
       <tr>
         {% for key, column in header %}
         {% if column.default_classes %}
