--- a/themes/FleetManagement/templates/page--node--206.html.twig
+++ b/themes/FleetManagement/templates/page--node--206.html.twig
@@ -1,142 +1,3 @@
-{% if not logged_in %}
-{{ attach_library("fleet_management_theme/front-style") }}
-{% if page.header %}
-<header id="header" class="fixed-top" style="background: #37517e">
-  <div class="container-fluid px-5 d-flex align-items-center">
-    <h1 class="logo mr-auto"><a href="{{ url('<front>') }}">DIGIFLEET</a></h1>
-    {{ page.header }}
-    <div style="margin-left: 50px">
-      <a href="{{ url('<front>') }}user/login" class="btn btn-success">login</a>
-      <a href="{{ url('<front>') }}register/company" class="btn btn-primary"
-        >Register</a
-      >
-    </div>
-    <!-- <a href="/user/logout" class="btn btn-outline-danger">Logout</a> -->
-  </div>
-</header>
-{% endif %}
-<!-- End Header -->
-{% if is_front and show_slideshow %}
-<section id="hero" class="d-flex align-items-center">
-  <div class="container">
-    <div class="row">
-      {% for slider_contents in slider_content %}
-      {{ slider_contents | raw }}
-      {% endfor %}
-    </div>
-  </div>
-</section>
-{% endif %}
-<!-- End Hero -->
-
-<main id="main">
-  <!-- ======= content Section ======= -->
-  {% if page.content and not is_front %}
-  <section id="content" class="section-bg">
-    <div class="container" data-aos="fade-up">
-      {{ page.content }}
-    </div>
-  </section>
-  {% endif %}
-  <!-- ======= content Section ======= -->
-
-  <!-- ======= Services Section ======= -->
-
-  {% if page.features_first and is_front %}
-  <section id="services" class="services section-bg">
-    <div class="container" data-aos="fade-up">
-      {{ page.features_first }}
-    </div>
-  </section>
-  {% endif %}
-  <!-- End Services Section -->
-  <!-- ======= Cta Section ======= -->
-  {% if page.features_second and is_front %}
-  <section id="cta" class="cta">
-    <div class="container" data-aos="zoom-in">
-      <div class="row">
-        {{ page.features_second }}
-      </div>
-    </div>
-  </section>
-  {% endif %}
-  <!-- End Cta Section -->
-</main>
-<!-- End #main -->
-
-<!-- ======= Footer ======= -->
-<footer id="footer">
-  {% if page.features_third and is_front %}
-  <div class="footer-newsletter">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6">
-          <h4>Join Our Newsletter</h4>
-          <p>
-            Tamen quem nulla quae legam multos aute sint culpa legam noster
-            magna
-          </p>
-          {{ page.features_third }}
-        </div>
-      </div>
-    </div>
-  </div>
-  {% endif %}
-
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
-        {% if page.bottom_first %}
-        <div class="col-lg-4 col-md-6 footer-contact">
-          {{ page.bottom_first }}
-        </div>
-        {% endif %} {% if page.bottom_second %}
-        <div class="col-lg-4 col-md-6 footer-links">
-          <h4>Links</h4>
-          {{ page.bottom_second }}
-        </div>
-        {% endif %}
-
-        <div class="col-lg-4 col-md-6 footer-links">
-          <h4>Our Social Networks</h4>
-          <p>
-            Cras fermentum odio eu feugiat lide par naso tierra videa magna
-            derita valies
-          </p>
-          <div class="social-links mt-3">
-            <a href="{{ facebook_url }}" class="facebook"
-              ><i class="bx bxl-facebook"></i
-            ></a>
-            <a href="{{ instagram_url }}" class="instagram"
-              ><i class="bx bxl-instagram"></i
-            ></a>
-            <a href="{{ linkedin_url }}" class="linkedin"
-              ><i class="bx bxl-linkedin"></i
-            ></a>
-            <a href="{{ twitter_url }}" class="twitter"
-              ><i class="bx bxl-twitter"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container footer-bottom clearfix">
-    {% if page.footer_first %}
-    {{ page.footer_first }}
-    {% endif %} {% if page.footer_second %}
-    {{ page.footer_second }}
-    {% endif %}
-  </div>
-</footer>
-
-<!-- End Footer -->
-
-<a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
-<div id="preloader"></div>
-
-{% else %}
-
 {{ attach_library("fleet_management_theme/back-style") }}
 <script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/modernizr.min.js"></script>
 <script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/jquery-3.2.1.min.js"></script>
@@ -171,7 +32,7 @@
       base_url ~ '/operator/dashboard' %} {% elseif role == 'administrator' %}
       {% set home_url = base_url ~ '/admin/dashboard' %} {% endif %}
       <a href="{{ home_url }}"><h5 class="logo" alt="logo">DIGIFLEET</h5></a>
-      <a href="{{ home_url }}"><h5 class="minimal-logo text-center" alt="logo"><strong>DF</strong></h5></a>
+      <a href="{{ home_url }}"><h5 class="minimal-logo" alt="logo"><strong>DF</strong></h5></a>
     </div>
     {% if expiry_status != 'expired' %}
     <ul class="list-unstyled components">
@@ -272,7 +133,39 @@
       value="{{ expiry_status }}"
     />
     {% if expiry_status != 'expired' %}
-    {{ page.content }}
+    
+    <div class="">
+      <div class="widget-area-2">
+        <!-- Item -->
+        <h3 class="widget-title">Notifications</h3>
+        <div class="lorvens-widget mb-3">
+          <div id="accordion">
+            {% if notifications | json_decode %}
+              {% for notification in notifications | json_decode %}
+              <div class="card">
+              {% if notification.0 %}
+              <div class="accordion-header" style="background: #37517e" id="{{ notification.0.id }}">
+                <h5 class="mb-0" data-toggle="collapse" data-target="#{{ notification.0.id }}id" aria-expanded="true" aria-controls="{{ notification.0.id }}id">
+                  {{ notification.0.type }}
+                </h5>
+              </div>
+              {% endif %}
+              <div id="{{ notification.0.id }}id" class="collapse" aria-labelledby="{{ notification.0.id }}" data-parent="#accordion">
+              {% for notifi in notification %}
+                <div class="">
+                    <a class="dropdown-item card-body" href="#"><span class="{{ notifi.icon }}"></span> {{ notifi.title }}</a>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+        <!-- /Item -->
+
+      </div>
+    </div>
     {% endif %}
     <!-- /Main Content -->
   </div>
@@ -290,18 +183,6 @@
   var package = document.getElementById("package").value;
   // console.log(package);
   if (package == "expired") {
-    // Swal.fire({
-    //   title: "package Expired!",
-    //   text: "Please Renew your package!",
-    //   icon: "error",
-    //   button: "Renew!",
-    //   closeOnClickOutside: false,
-    //   closeOnEsc: false,
-    //   dangerMode: true,
-    // });
-    // $(".swal-button").on("click", function () {
-    //   window.location.href = "https://www.google.com/";
-    // });
     Swal.fire({
       title: 'Package Expired!',
       text: "Please Renew Your Package!",
@@ -333,47 +214,8 @@
       }
     })
   }
-  
-  // $('#liveToastBtn').on('click',function(){
-  //   const Toast = Swal.mixin({
-  //     toast: true,
-  //     position: 'bottom-end',
-  //     showConfirmButton: false,
-  //     timer: 3000,
-  //     timerProgressBar: true,
-  //     didOpen: (toast) => {
-  //       toast.addEventListener('mouseenter', Swal.stopTimer)
-  //       toast.addEventListener('mouseleave', Swal.resumeTimer)
-  //     }
-  //   });
-  //   toastcall('success','SignUp Successful!!!');
-  // });
-  
-  // // toastcall( '{{ icon }}' , '{{ title }}');
-  // function toastcall(icon,title){
-  //   const Toast = Swal.mixin({
-  //     toast: true,
-  //     position: 'bottom-end',
-  //     showConfirmButton: false,
-  //     timer: 3000,
-  //     timerProgressBar: true,
-  //     didOpen: (toast) => {
-  //       toast.addEventListener('mouseenter', Swal.stopTimer)
-  //       toast.addEventListener('mouseleave', Swal.resumeTimer)
-  //     }
-  //   });
-  //   Toast.fire({
-  //     icon: icon,
-  //     title: title,
-  //   });
-  // }
 </script>
-  {# {% for notification in popup %}
-  <script> toastcall("{{ notification.icon }}" , '{{ notification.title }}'); </script>    
-  {% endfor %} #}
-{# <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> #}
 <script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/sweetalert2.all.js"></script>
 <script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/custom.js"></script>
 <script src="{{ url('<front>') }}themes/FleetManagement/assets/back/js/bootstrap.min.js"></script>
 
-{% endif %}
